<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="tv_home_team" type="id"/>
    <item name="tv_home_score" type="id"/>
    <item name="tv_away_team" type="id"/>
    <item name="tv_away_score" type="id"/>
    <item name="tv_event_date" type="id" />
    <item name="btn_nv" type="id" />
    <item name="rv_event" type="id"/>
    <item name="btn_prev_match" type="id"/>
    <item name="btn_next_match" type="id"/>
    <item name="btn_fav" type="id"/>
    <item name="toolbar" type="id" />
    <item name="tab_layout" type="id" />
    <item name="view_pager" type="id" />
    <item name="frame_layout" type="id" />
    <item name="spinner" type="id"/>
    <item name="list_team" type="id"/>
    <item name="team_badge" type="id"/>
    <item name="team_name" type="id"/>
</resources>