<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/mn_favorites"
            android:icon="@drawable/ic_favorite_border"
            android:title="Favorites"
            app:showAsAction="always" />
</menu>