<resources>
    <string name="app_name">FootballClub</string>
    <string name="vs">vs</string>
    <string name="home">home</string>
    <string name="away">away</string>
    <string name="VS">VS</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="Lineups">Lineups</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="search">Search</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

</resources>
